--- a/index.html
+++ b/index.html
@@ -26,24 +26,34 @@
       <tbody id="tabelaJogadores">
         <tr>
           <td>Anne</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>2</td>
+          <td>5</td>
+          <td>1</td>
+          <td>24</td>
           <td><button onClick="adicionarVitoria()">Vitória</button></td>
           <td><button onClick="adicionarEmpate()">Empate</button></td>
           <td><button onClick="adicionarDerrota()">Derrota</button></td>
         </tr>
         <tr>
           <td>Heitor</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>3</td>
+          <td>5</td>
+          <td>6</td>
+          <td>2</td>
           <td><button onClick="adicionarVitoria()">Vitória</button></td>
           <td><button onClick="adicionarEmpate()">Empate</button></td>
           <td><button onClick="adicionarDerrota()">Derrota</button></td>
         </tr>
+        <tr>
+            <td>Caio</td>
+            <td>2</td>
+            <td>3</td>
+            <td>6</td>
+            <td>20</td>
+            <td><button onClick="adicionarVitoria()">Vitória</button></td>
+            <td><button onClick="adicionarEmpate()">Empate</button></td>
+            <td><button onClick="adicionarDerrota()">Derrota</button></td>
+          </tr>
       </tbody>
     </table>
     
