--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </tr>
       </thead>
       <tbody id="tabelaJogadores">
-        <tr>
+      <!--  <tr>
           <td>Anne</td>
           <td>2</td>
           <td>5</td>
@@ -54,8 +54,9 @@
             <td><button onClick="adicionarEmpate()">Empate</button></td>
             <td><button onClick="adicionarDerrota()">Derrota</button></td>
           </tr>
-      </tbody>
+      </tbody>-->
     </table>
+    
     
 
 
